@@ -1,4 +1,7 @@
 
+innoextract 1.7	(TDB)
+ - Fixed wrong case in parent directory when creating subdirectories
+
 innoextract 1.6 (2016-03-24)
  - Added support for Inno Setup 5.5.7 (and 5.5.8) installers
  - Added a --collisions=rename-all option
